// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/TextInput default 1`] = `
<input
  className="sc-gZMcBi eDBlmm"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput error 1`] = `
<input
  className="sc-gZMcBi cMShFf"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput focus 1`] = `
<input
  className="sc-gZMcBi gPKDvp"
  placeholder="placeholder"
/>
`;
